--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.13",
     "aos": "^2.3.4",
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0",
     "react-icon-cloud": "^4.1.7",
-    "react-simple-typewriter": "^5.0.1",
-    "@tailwindcss/vite": "^4.1.13"
+    "react-icons": "^5.5.0",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
